create and modify space profile updated with bio and geocod

--- a/assets/stylesheets/scss/_pard.erb.scss
+++ b/assets/stylesheets/scss/_pard.erb.scss
@@ -1276,6 +1276,10 @@ select.category-input{
     margin-top: 2.5rem;
   }
 
+  .category-modifyProfile.field-modifyProduction{
+    margin-bottom: 0;
+  }
+
   .name-SpaceForm, .address-SpaceForm, .personal_web-SpaceForm, .links-SpaceForm{
     margin-bottom: 1.5rem;
   }
