--- a/assets/stylesheets/scss/_pard.erb.scss
+++ b/assets/stylesheets/scss/_pard.erb.scss
@@ -1378,15 +1378,16 @@ select.category-input{
     margin: 2rem 0;
   }
 
-  .MultipleSelector-FormField select{
+  .MultipleSelector-FormField select, .MultipleDaysSelector-FormField select{
     width: 100% !important;
     outline: none !important;
 
   }
 
-  .MultipleSelector-FormField .ms-choice{
+  .MultipleSelector-FormField .ms-choice, .MultipleDaysSelector-FormField .ms-choice{
       @include border-radius($element-border-radius);
       font-size: $almostNormalSize;
+      width: 100%;
       height: 34px;
       span{
         padding: 4px 8px;
@@ -1394,6 +1395,10 @@ select.category-input{
       div{
         top:  4px;
       }
+  }
+
+  .MultipleSelector-FormField .ms-parent, .MultipleDaysSelector-FormField .ms-parent{
+      width: 100% !important;
   }
 
   .own-SpaceCall, .un_wanted-SpaceCall, .sharing-SpaceCall, .conditions-SpaceCall{
@@ -1405,10 +1410,6 @@ select.category-input{
     margin-left: 1.5rem !important;
   }
 
-/*   .children-ArtistCall, .children-modifyProduction{
-    display: inline-block;
-    margin-left: 3.8rem
-  } */
 
   .duration-ArtistCall, .duration-modifyProduction{
     display: inline-block;
@@ -1419,8 +1420,6 @@ select.category-input{
   .m-artistCall{
     font-size: 14px;
     float: right;
-    /* border-top: 1px solid; */
-    /* border-right: 1px solid; */
     padding: 0 1rem;
     color: $grey-4;
   }
