print proposal design 1

--- a/assets/stylesheets/scss/_pages.erb.scss
+++ b/assets/stylesheets/scss/_pages.erb.scss
@@ -2092,6 +2092,9 @@ ORGANIZATION PAGE
 .callToActionBtn-container-eventCard{
   clear: both;
   margin-top: 1.5rem;
+  a{
+    color:  white;
+  }
 }
 
 
