proposals displayed correctly - new corrected call forms - gastronomy icon

--- a/assets/stylesheets/scss/_pages.erb.scss
+++ b/assets/stylesheets/scss/_pages.erb.scss
@@ -873,6 +873,9 @@ Profile Section
   margin-bottom: 3rem;
 }
 
+.proposalFieldPrinted{
+  margin: 1.5rem 0;
+}
 
 /*-----------------
 Production Section
