some bugs and missunderstanding in user experience fixed

--- a/assets/stylesheets/scss/_pages.erb.scss
+++ b/assets/stylesheets/scss/_pages.erb.scss
@@ -2310,12 +2310,13 @@ ORGANIZATION PAGE
   }
 }
 
-.callToActionBtn-container-eventCard{
+.toCallPage-container-eventCard{
   clear: both;
-  margin-top: 1.5rem;
-  a{
+  margin-top: 1rem;
+  text-align: right;
+ /*  a{
     color:  white;
-  }
+  } */
 }
 
 .status-eventCard{
