design program manager

--- a/assets/stylesheets/scss/_pages.erb.scss
+++ b/assets/stylesheets/scss/_pages.erb.scss
@@ -966,6 +966,17 @@ Profile Section
   margin: 1.5rem 0;
 }
 
+.trash-icon-delete{
+  font-size: $almostNormalSize;
+  vertical-align: -0.1rem;
+  margin-right: 0.2rem;
+}
+
+.actionButton-container-popup{
+  text-align: right;
+  margin-bottom: -1rem;
+}
+
 /*-----------------
 Production Section
 -------------------*/
