--- a/assets/stylesheets/scss/_pard.erb.scss
+++ b/assets/stylesheets/scss/_pard.erb.scss
@@ -1554,6 +1554,7 @@ POPUP
     margin-bottom: 0.6rem;
     @include breakpoint(small down){
       margin-right: 2rem;
+      margin-bottom: 50vh;
     }
 }
 
